// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default component 1`] = `
<header
  class="flex-header"
>
  <div
    class="flex-fill"
  />
</header>
`;

exports[`should render a header with all content 1`] = `
<header
  class="flex-header"
>
  <div
    class="flex-end"
  >
    <div>
      start content
    </div>
  </div>
  <div
    class="flex-fill"
  >
    <div
      class="title-container"
    >
      <h1
        class="title"
      >
        Title
      </h1>
    </div>
  </div>
  <div
    class="flex-end"
  >
    <div>
      end content
    </div>
  </div>
</header>
`;

exports[`should render a header with content on the left 1`] = `
<header
  class="flex-header"
>
  <div
    class="flex-end"
  >
    <div>
      start content
    </div>
  </div>
  <div
    class="flex-fill"
  />
</header>
`;

exports[`should render a header with content on the right 1`] = `
<header
  class="flex-header"
>
  <div
    class="flex-fill"
  />
  <div
    class="flex-end"
  >
    <div>
      end content
    </div>
  </div>
</header>
`;

exports[`should render a header with title only 1`] = `
<header
  class="flex-header"
>
  <div
    class="flex-fill"
  >
    <div
      class="title-container"
    >
      <h1
        class="title"
      >
        title
      </h1>
    </div>
  </div>
</header>
`;

exports[`should render a subheader with all content 1`] = `
<header
  class="flex-subheader"
>
  <div
    class="flex-end"
  >
    <div>
      start content
    </div>
  </div>
  <div
    class="flex-fill"
  >
    <div
      class="title-container"
    >
      <h1
        class="title"
      >
        Title
      </h1>
    </div>
  </div>
  <div
    class="flex-end"
  >
    <div>
      end content
    </div>
  </div>
</header>
`;

exports[`should render a subheader with title only 1`] = `
<header
  class="flex-subheader"
>
  <div
    class="flex-fill"
  >
    <div
      class="title-container"
    >
      <h1
        class="title"
      >
        title
      </h1>
    </div>
  </div>
</header>
`;
